--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Version: 0.1
-!.gitkeep
 
 build/
 .git/
@@ -8,3 +6,4 @@ vgg16_weights.pth
 vgg16_weights.wts
 vgg11/build/
 vgg11/sim_vladNet.onnx 
+.vscode/
